Renamed SESSION MemberType to SESSION_MEMBER. Various Member frontend cleanup.